Working on asynchronous assignments handling

--- a/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.html
+++ b/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.html
@@ -1,5 +1,7 @@
 <app-loader *ngIf="loading"></app-loader>
 
+<pre *ngIf="pAssignments$ | async as pAssignments"> {{ prettify(pAssignments) }}</pre>
+
 <div *ngIf="studentsForm">
   <form
     (ngSubmit)="onSubmit()"
