Almost done Assignments

--- a/src/app/modules/assignments/components/assignment/assignment.component.scss
+++ b/src/app/modules/assignments/components/assignment/assignment.component.scss
@@ -1,7 +1,11 @@
 // .assignment-name {}
 
-.assignment-assignee {
-  font-weight: bold;
-}
 
+
+// @media print {
+  .assignment-assignee {
+    font-weight: bold;
+  }
+
+// }
 // .assignment-assistant {}
