Better grouping of parts

--- a/src/app/modules/users/pages/user-edit/user-edit.component.html
+++ b/src/app/modules/users/pages/user-edit/user-edit.component.html
@@ -179,7 +179,7 @@
               "
             >
               <legend>
-                {{ section | translate | titlecase }}
+                {{ meeting | translate | titlecase }}
               </legend>
               <mat-chip
                 [fxHide]="
