--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -18,4 +18,4 @@
   <app-loader></app-loader>
 </ng-template>
 <!--</ng-container>-->
-<app-import-epub></app-import-epub>
+<!-- <app-import-epub></app-import-epub> -->
