--- a/src/app/modules/assignments/pages/assignment-list/assignment-list.component.html
+++ b/src/app/modules/assignments/pages/assignment-list/assignment-list.component.html
@@ -11,6 +11,19 @@
 <mat-tab-group mat-align-tabs="center" animationDuration="0ms">
   <mat-tab>
     <ng-template mat-tab-label>
+      {{ "Christian Life and Ministry" | translate | titlecase }}
+    </ng-template>
+    <ng-template matTabContent>
+      <app-assignment-midweek
+        *ngIf="selectedMonth"
+        [month]="selectedMonth"
+        (editMode)="disableNavigation($event)">
+      </app-assignment-midweek>
+    </ng-template>
+  </mat-tab>
+  
+  <mat-tab>
+    <ng-template mat-tab-label>
       {{ "Students" | translate | titlecase }}
     </ng-template>
     <ng-template matTabContent>
@@ -28,19 +41,7 @@
     </ng-template>
   </mat-tab>
 
-  <mat-tab>
-    <ng-template mat-tab-label>
-      {{ "Christian Life and Ministry" | translate | titlecase }}
-    </ng-template>
-    <ng-template matTabContent>
-      <!--<app-assignment-midweek-->
-      <!--  *ngIf="selectedMonth"-->
-      <!--  [month]="selectedMonth"-->
-      <!--  (editMode)="disableNavigation($event)"-->
-      <!-- >
-      </app-assignment-midweek>-->
-    </ng-template>
-  </mat-tab>
+  
 
   <!-- <mat-tab>
     <ng-template mat-tab-label>
