--- a/src/app/modules/assignments/components/assignment-midweek/assignment-midweek.component.html
+++ b/src/app/modules/assignments/components/assignment-midweek/assignment-midweek.component.html
@@ -1,5 +1,13 @@
-<!-- <p>{{ month | translateDate: 'DATE_SHORT' | async }}</p> -->
+<ng-template #loading>
+    <app-loader></app-loader>
+</ng-template>
 
-<p *ngFor="let program of programs | keyvalue">
-    {{ program.value.week | translateDate: 'DATE_SHORT' | async }}
-</p>
+<ng-container *ngIf="programs; else loading">
+    <div *ngFor="let program of programs | keyvalue">
+        <h2>{{ program.value.week | translateDate: "MMM-D":{days: 6} | async }}</h2>
+
+        <div *ngFor="let assignment of program.value.assignments" [title]="assignment.description">
+            {{ assignment.title }}
+        </div>
+    </div>
+</ng-container>
