Working on programs

--- a/src/app/modules/assignments/components/assignable-list/assignable-list.component.html
+++ b/src/app/modules/assignments/components/assignable-list/assignable-list.component.html
@@ -65,7 +65,7 @@
       </span>
       <span matLine
         >{{ "total" | translate | titlecase }}
-        {{ user.assignments.length }}</span
+        {{ getAssignmentsNumber(user.assignments) }}</span
       >
     </mat-list-option>
 
