--- a/src/app/modules/assignments/components/assignment-midweek/assignment-midweek.component.html
+++ b/src/app/modules/assignments/components/assignment-midweek/assignment-midweek.component.html
@@ -66,7 +66,7 @@
                     title="{{ 'assignee' | translate | titlecase }}"
                     placeholder="{{ 'assignee' | translate | titlecase }}"
                     [form]="programsForm"
-                    [controlPath]="[program.key, 
+                    [controlPath]="[program._id, 
                       'assignments', 
                       assignment.position, 
                       'assignee']"
@@ -81,7 +81,7 @@
                     title="{{ 'assistant' | translate | titlecase }}"
                     placeholder="{{ 'assistant' | translate | titlecase }}"
                     [form]="programsForm"
-                    [controlPath]="[program.key, 
+                    [controlPath]="[program._id, 
                       'assignments', 
                       assignment.position, 
                       'assistant']"
