--- a/src/app/modules/assignments/components/assignment-midweek/assignment-midweek.component.html
+++ b/src/app/modules/assignments/components/assignment-midweek/assignment-midweek.component.html
@@ -5,11 +5,15 @@
   <!-- <ng-template [ngIf]="mProgramsWithLoading.loading"><app-loader></app-loader></ng-template> -->
 
   <ng-template [ngIf]="mProgramsWithLoading.value">
-    <form *ngIf="mProgramsWithLoading.value as mPrograms" [formGroup]="programsForm" 
+    <form *ngIf="mProgramsWithLoading.value as mPrograms" 
+      [formGroup]="programsForm" 
       (ngSubmit)="onSubmit()">
       <div *ngIf="mPrograms.size && !loading"> <!-- During loading no buttons-->
         <!-- FORM BUTTONS-->
-        <div *ngIf="isEditMode; else viewButtons">
+        <div *ngIf="isEditMode; else viewButtons" 
+          fxLayout="row"
+          fxLayoutAlign="start center"
+          fxLayoutGap="1em">
           <!-- 
           fxLayout="row" fxLayoutAlign="space-around center" -->
           <button
@@ -26,10 +30,14 @@
             <mat-icon>save</mat-icon>
             {{ "save" | translate | titlecase }}
           </button>
+
         </div>
 
         <!-- PRINT BUTTONS -->
         <ng-template #viewButtons>
+          <div fxLayout="row"
+            fxLayoutAlign="start center"
+            fxLayoutGap="1em">
             <button
               type="button"
               mat-raised-button
@@ -49,22 +57,45 @@
               <mat-icon>print</mat-icon>
               {{ "print" | translate | titlecase }}
             </button>
+          </div>
         </ng-template>
       </div>
+      &nbsp; 
+      <!-- WEEKS -->
+      <div #printableArea>
+        <div *ngFor="let mProgram of mPrograms | keyvalue"
+          [formGroupName]="mProgram.key">
+          <!-- Week block -->
+          <div *ngIf="mProgram.value as program" 
+            [ngClass]="{
+              'week-box-edit': isEditMode,
+              'week-box-view': !isEditMode
+            }">
+            <h2>{{ program.week | translateDate: "MMM-D" : {days: 6} | async }}</h2>
 
-      <div *ngFor="let mProgram of mPrograms | keyvalue"
-        [formGroupName]="mProgram.key">
-        <div *ngIf="mProgram.value as program">
-          <h2>{{ program.week | translateDate: "MMM-D" : {days: 6} | async }}</h2>
-
-          <div formArrayName="assignments">
-            <div *ngFor="let assignment of program.assignments" 
-              [formGroupName]="assignment.position"
-              [title]="assignment.description">
-              <div>
-                {{ assignment.title }}
-                <div *ngIf="isEditMode; else view">
-                  <div fxFlex="30" fxFlex.lt-sm="auto">
+            <div formArrayName="assignments" 
+              fxLayout="column"
+              fxLayoutAlign="space-around stretch">
+              <div *ngFor="let assignment of program.assignments" 
+                [formGroupName]="assignment.position"
+                [attr.title]="assignment.description ? assignment.description: null"
+                fxFlex 
+                fxLayout="row wrap"
+                fxLayoutAlign="start center"
+                class="assignment-line">
+                
+                <div class="assignment-title" fxFlex="30" 
+                  [fxFlex.lt-sm]="isEditMode ? 100 : null">
+                  {{ assignment.title }}
+                </div>
+                
+                <div *ngIf="isEditMode; else view"
+                  fxFlex="70"
+                  fxFlex.lt-sm="95"
+                  fxFlexOffset.lt-sm="5"
+                  fxLayout="row wrap"
+                  fxLayoutAlign="space-between center">
+                  <div [fxFlex]="assignment.part.withAssistant ? 49 : 100">
                     <app-picker
                       [optionsTemplate]="displayComponentRef.componentType"
                       title="{{ 'assignee' | translate | titlecase }}"
@@ -79,7 +110,8 @@
                     ></app-picker>
                   </div>
 
-                  <div *ngIf="assignment.part.withAssistant" fxFlex="30" fxFlex.lt-sm="auto">
+                  <div *ngIf="assignment.part.withAssistant" fxFlex="49">
+                    
                     <app-picker
                       [optionsTemplate]="displayComponentRef.componentType"
                       title="{{ 'assistant' | translate | titlecase }}"
@@ -96,11 +128,16 @@
                 </div>
 
                 <ng-template #view>
-                  <span>{{ assignment.assignee?.fullName }}</span>
+                  <div fxFlex="70" 
+                    fxFlex.lt-xs="95" 
+                    fxFlexOffset.lt-xs="5">
+                    <span class="assignment-assignee">{{ assignment.assignee?.fullName }}</span>
 
-                  <span *ngIf="assignment.assistant">
-                    &nbsp;/&nbsp;{{ assignment.assistant?.fullName }}</span>
+                    <span *ngIf="assignment.assistant" class="assignment-assistant">
+                      &nbsp;/&nbsp;{{ assignment.assistant?.fullName }}</span>
+                  </div>
                 </ng-template>
+                
               </div>
             </div>
           </div>
