--- a/src/app/modules/assignments/components/assignment-midweek/assignment-midweek.component.html
+++ b/src/app/modules/assignments/components/assignment-midweek/assignment-midweek.component.html
@@ -8,57 +8,68 @@
     <form *ngIf="mProgramsWithLoading.value as mPrograms" 
       [formGroup]="programsForm" 
       (ngSubmit)="onSubmit()">
-      <div *ngIf="mPrograms.size && !loading"> <!-- During loading no buttons-->
+      <div *ngIf="mPrograms.size && !loading"
+        fxLayout="row"
+        fxLayoutAlign="start center"
+        fxLayoutGap="1em"> <!-- During loading no buttons-->
         <!-- FORM BUTTONS-->
-        <div *ngIf="isEditMode; else viewButtons" 
-          fxLayout="row"
-          fxLayoutAlign="start center"
-          fxLayoutGap="1em">
-          <!-- 
-          fxLayout="row" fxLayoutAlign="space-around center" -->
-          <button
-            type="reset"
-            mat-raised-button
-            class="mat-primary"
-            (click)="cancelEdit()"
-          >
-            <mat-icon>undo</mat-icon>
+        <button *ngIf="isEditMode"
+          type="reset"
+          mat-raised-button
+          class="mat-primary"
+          (click)="cancelEdit()">
+          <mat-icon>undo</mat-icon>
+          <span fxHide.lt-sm>
             {{ "cancel" | translate | titlecase }}
-          </button>
+          </span>
+        </button>
 
-          <button type="submit" mat-raised-button class="mat-primary">
-            <mat-icon>save</mat-icon>
+        <button *ngIf="isEditMode"
+          type="submit" 
+          mat-raised-button class="mat-primary">
+          <mat-icon>save</mat-icon>
+          <span fxHide.lt-sm>
             {{ "save" | translate | titlecase }}
-          </button>
-
-        </div>
+          </span>
+        </button>
 
         <!-- PRINT BUTTONS -->
-        <ng-template #viewButtons>
-          <div fxLayout="row"
-            fxLayoutAlign="start center"
-            fxLayoutGap="1em">
-            <button
-              type="button"
-              mat-raised-button
-              class="mat-primary"
-              (click)="setEditMode(true)"
-            >
-              <mat-icon>edit</mat-icon>
-              {{ "edit" | translate | titlecase }}
-            </button>
+        <button *ngIf="!isEditMode"
+          type="button"
+          mat-raised-button
+          class="mat-primary"
+          (click)="setEditMode(true)">
+          <mat-icon>edit</mat-icon>
+          <span fxHide.lt-sm>
+            {{ "edit" | translate | titlecase }}
+          </span>
+        </button>
 
-            <button
-              type="button"
-              mat-raised-button
-              class="mat-primary"
-              (click)="saveAsPdf()"
-            >
-              <mat-icon>print</mat-icon>
-              {{ "print" | translate | titlecase }}
-            </button>
-          </div>
-        </ng-template>
+        <button *ngIf="!isEditMode"
+          type="button"
+          mat-raised-button
+          class="mat-primary"
+          (click)="saveAsPdf()">
+          <mat-icon>print</mat-icon>
+          <span fxHide.lt-sm>
+            {{ "print" | translate | titlecase }}
+          </span>
+        </button>
+
+        <!-- PART SELECTOR -->
+        <mat-chip-list>
+          <mat-chip
+            [selected]="getDisplayStudentsParts() === true"
+            (click)="setDisplayStudentsParts(true);">
+            Students Parts
+          </mat-chip>
+          <mat-chip
+            [selected]="getDisplayStudentsParts() === false"
+            (click)="setDisplayStudentsParts(false);">
+            Non Students Parts
+          </mat-chip>
+        </mat-chip-list>
+
       </div>
       &nbsp; 
       <!-- WEEKS -->
@@ -75,70 +86,73 @@
 
             <div formArrayName="assignments" 
               fxLayout="column"
-              fxLayoutAlign="space-around stretch">
-              <div *ngFor="let assignment of program.assignments" 
-                [formGroupName]="assignment.position"
-                [attr.title]="assignment.description ? assignment.description: null"
-                fxFlex 
-                fxLayout="row wrap"
-                fxLayoutAlign="start center"
-                class="assignment-line">
-                
-                <div class="assignment-title" fxFlex="30" 
-                  [fxFlex.lt-sm]="isEditMode ? 100 : null">
-                  {{ assignment.title }}
-                </div>
-                
-                <div *ngIf="isEditMode; else view"
-                  fxFlex="70"
-                  fxFlex.lt-sm="95"
-                  fxFlexOffset.lt-sm="5"
+              fxLayoutAlign="start stretch">
+              <ng-container *ngFor="let assignment of program.assignments">
+                <div *ngIf="isWorkingOnPart(assignment.part)"
+                  [formGroupName]="assignment.position"
+                  fxFlex 
                   fxLayout="row wrap"
-                  fxLayoutAlign="space-between center">
-                  <div [fxFlex]="assignment.part.withAssistant ? 49 : 100">
-                    <app-picker
-                      [optionsTemplate]="displayComponentRef.componentType"
-                      title="{{ 'assignee' | translate | titlecase }}"
-                      placeholder="{{ 'assignee' | translate | titlecase }}"
-                      [form]="programsForm"
-                      [controlPath]="[program._id, 
-                        'assignments', 
-                        assignment.position, 
-                        'assignee']"
-                      [options]="assignableListByPart[assignment.part.name]"
-                      labelField="fullName"
-                    ></app-picker>
+                  fxLayoutAlign="start center"
+                  class="assignment-line">
+                  
+                  <div class="assignment-title" 
+                    [matTooltip]="assignment.description ? assignment.description: null"
+                    fxFlex="30" 
+                    [fxFlex.lt-sm]="isEditMode ? 100 : null">
+                    {{ assignment.title }}
+                  </div>
+                  
+                  <div *ngIf="isEditMode; else view"
+                    fxFlex="70"
+                    fxFlex.lt-sm="95"
+                    fxFlexOffset.lt-sm="5"
+                    fxLayout="row wrap"
+                    fxLayoutAlign="space-between center">
+                    <div [fxFlex]="assignment.part.withAssistant ? 49 : 100">
+                      <app-picker
+                        [optionsTemplate]="displayComponentRef.componentType"
+                        title="{{ assignment.title | titlecase }}"
+                        placeholder="{{ 'assignee' | translate | titlecase }}"
+                        [form]="programsForm"
+                        [controlPath]="[program._id, 
+                          'assignments', 
+                          assignment.position, 
+                          'assignee']"
+                        [options]="assignableListByPart[assignment.part.name]"
+                        labelField="fullName"
+                      ></app-picker>
+                    </div>
+
+                    <div *ngIf="assignment.part.withAssistant" fxFlex="49">
+                      
+                      <app-picker
+                        [optionsTemplate]="displayComponentRef.componentType"
+                        title="{{ assignment.title | titlecase }} ({{ 'assistant' | translate | titlecase }})"
+                        placeholder="{{ 'assistant' | translate | titlecase }}"
+                        [form]="programsForm"
+                        [controlPath]="[program._id, 
+                          'assignments', 
+                          assignment.position, 
+                          'assistant']"
+                        [options]="assignableListByPart['clm.ministry.assistant']"
+                        labelField="fullName"
+                      ></app-picker>
+                    </div>
                   </div>
 
-                  <div *ngIf="assignment.part.withAssistant" fxFlex="49">
-                    
-                    <app-picker
-                      [optionsTemplate]="displayComponentRef.componentType"
-                      title="{{ 'assistant' | translate | titlecase }}"
-                      placeholder="{{ 'assistant' | translate | titlecase }}"
-                      [form]="programsForm"
-                      [controlPath]="[program._id, 
-                        'assignments', 
-                        assignment.position, 
-                        'assistant']"
-                      [options]="assignableListByPart['clm.ministry.assistant']"
-                      labelField="fullName"
-                    ></app-picker>
-                  </div>
+                  <ng-template #view>
+                    <div fxFlex="70" 
+                      fxFlex.lt-xs="95" 
+                      fxFlexOffset.lt-xs="5">
+                      <span class="assignment-assignee">{{ assignment.assignee?.fullName }}</span>
+
+                      <span *ngIf="assignment.assistant" class="assignment-assistant">
+                        &nbsp;/&nbsp;{{ assignment.assistant?.fullName }}</span>
+                    </div>
+                  </ng-template>
+                  <mat-divider></mat-divider>
                 </div>
-
-                <ng-template #view>
-                  <div fxFlex="70" 
-                    fxFlex.lt-xs="95" 
-                    fxFlexOffset.lt-xs="5">
-                    <span class="assignment-assignee">{{ assignment.assignee?.fullName }}</span>
-
-                    <span *ngIf="assignment.assistant" class="assignment-assistant">
-                      &nbsp;/&nbsp;{{ assignment.assistant?.fullName }}</span>
-                  </div>
-                </ng-template>
-                
-              </div>
+              </ng-container>
             </div>
           </div>
         </div>
