--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -8,8 +8,12 @@
 <!--  } as loadedData">-->
 <!--<div *ngIf="loadedData.users && loadedData.parts; else loading">-->
 <p>Parts loaded: {{ parts.length }}</p>
-<p *ngIf="users$ | async as usersObs">Users Observable loaded: {{ usersObs.length }}</p>
-<p *ngIf="assignments$ | async as assignmentsObs">Assignments loaded: {{ assignmentsObs.length }}</p>
+<p *ngIf="users$ | async as usersObs">
+  Users Observable loaded: {{ usersObs.length }}
+</p>
+<p *ngIf="assignments$ | async as assignmentsObs">
+  Assignments loaded: {{ assignmentsObs.length }}
+</p>
 
 <!-- <app-picker title="Choose a user" placeholder="Choose a user ..." [options]="users" labelField="fullName"></app-picker> -->
 
@@ -18,4 +22,4 @@
   <app-loader></app-loader>
 </ng-template>
 <!--</ng-container>-->
-<!-- <app-import-epub></app-import-epub> -->
+<app-import-epub></app-import-epub>
