Upgrade to Angular 12 and latest dependencies

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -22,4 +22,4 @@
   <app-loader></app-loader>
 </ng-template>
 <!--</ng-container>-->
-<app-import-epub></app-import-epub>
+<!-- <app-import-epub></app-import-epub> -->
