--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -1,70 +1,44 @@
-<div
-  fxLayout="column"
-  fxFlexFill
-  fxLayoutAlign="center center"
-  style="
+<div fxLayout="column" fxFlexFill fxLayoutAlign="center center" style="
     background-image: url('../../../assets/login11.jpg');
     height: 100%;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-  "
->
+  ">
   <div fxLayout="column">
     <div class="mat-elevation-z4">
       <mat-card>
-        <mat-card-title
-          >User login
+        <mat-card-title>User login
           <a class="redirect" [routerLink]="['/auth/register']">
             {{ "register-an-account" | translate | titlecase }}
           </a>
         </mat-card-title>
         <mat-card-content>
-          <form
-            fxLayout="column"
-            fxLayoutAlign="start stretch"
-            [formGroup]="userForm"
-            (ngSubmit)="login()"
-          >
+          <form fxLayout="column" fxLayoutAlign="start stretch"
+                [formGroup]="userForm" (ngSubmit)="login()">
             <div *ngIf="formMessages.all" class="help is-danger">
               <mat-form-field class="full-width">
                 <legend>{{ formMessages.all }}</legend>
               </mat-form-field>
             </div>
             <mat-form-field class="full-width">
-              <input
-                type="email"
-                id="email"
-                class="input"
-                placeholder="Please enter your email"
-                formControlName="email"
-                required
-                matInput
-              />
+              <input type="email" id="email" class="input"
+                     placeholder="Please enter your email"
+                     formControlName="email" required matInput />
             </mat-form-field>
             <div *ngIf="formMessages.email" class="help is-danger">
               {{ formMessages.email }}
             </div>
             <mat-form-field class="full-width">
-              <input
-                type="password"
-                id="password"
-                class="input"
-                placeholder="Please enter your password"
-                formControlName="password"
-                required
-                matInput
-              />
+              <input type="password" id="password" class="input"
+                     placeholder="Please enter your password"
+                     formControlName="password" required matInput />
             </mat-form-field>
             <div *ngIf="formMessages.password" class="help is-danger">
               {{ formMessages.password }}
             </div>
-            <button
-              mat-raised-button
-              color="primary"
-              type="submit"
-              [disabled]="!userForm.valid"
-            >
+            <button mat-raised-button color="primary" type="submit"
+                    [disabled]="!userForm.valid">
               {{ "login" | translate | titlecase }}
             </button>
           </form>
