--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 
-@import "~@angular/material/prebuilt-themes/purple-green.css";
-// @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import "@angular/material/prebuilt-themes/purple-green.css";
+// @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 // Import theming functions
 
